--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="index.css" rel="stylesheet" />
   <link href="../normalize.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
    <link rel="stylesheet" href="fremwork.css" />
   <link rel="stylesheet" href="index.css" />
   <!-- google fonts  -->
@@ -264,19 +263,19 @@
   <h2 class="main-title">features</h2>
   <div class="container">
 <div class="box">
-  <img src="./imgs/features-01.jpg" alt="">
+  <img  class="random-photo1" alt="islam">
 <h2>quality</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
 <a href="##features"> more </a>
 </div>
 <div class="box">
-  <img src="./imgs/features-02.jpg" alt="">
+  <img class="random-photo2" alt="islam">
 <h2>time</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
 <a href="#features"> more </a>
 </div>
 <div class="box">
-  <img src="./imgs/features-03.jpg" alt="">
+  <img class ="random-photo" alt="islam">
 <h2>passion</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
 <a href="#features"> more </a>
