--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>eslam mohamed abohamer</title>
   <link href="index.css" rel="stylesheet" />
-  <link href="../normalize.css" rel="stylesheet" />
+  <!-- <link href="../normalize.css" rel="stylesheet" /> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-   <link rel="stylesheet" href="fremwork.css" />
+  <link rel="stylesheet" href="fremwork.css" />
   <link rel="stylesheet" href="index.css" />
   <!-- google fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -232,58 +232,71 @@
   </div>
   <!--! end article******************************************************************** -->
   <!--? start gallery ******************************************************************* */ -->
-<div class="gallery" id="gallery">
-  <div class="container">
-    <h2 class="main-title">gallery</h2>
-<div class="boxs">
-  <div class="box">
-      <img src="./imgs/gallery-01.png" alt="">
+  <div class="gallery" id="gallery">
+    <div class="container">
+      <h2 class="main-title">gallery</h2>
+      <div class="boxs">
+        <div class="box">
+          <img class="change-list-photo" alt="myphoto">
+        </div>
+        <div class="box">
+          <img class="change-list-photo1"   alt="">
+        </div>
+        <div class="box">
+          <img class="change-list-photo2" alt="">
+        </div>
+        <div class="box">
+          <img src="./imgs/gallery-04.png" alt="">
+        </div>
+        <div class="box">
+          <img src="./imgs/gallery-05.jpg" alt="">
+        </div>
+        <div class="box">
+          <img src="./imgs/gallery-06.png" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- !.end gallery ************************************************************************-->
+  <!--? start features*********************************************************************** -->
+  <div class="features" id="features">
+    <h2 class="main-title">features</h2>
+    <div class="container">
+      <div class="box">
+        <img class="myphoto" src="./٢٠٢٣٠٢٢٧_١٣٥٩٤٨.jpg" alt="islam">
+        <h2>quality</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <a href="##features"> more </a>
+      </div>
+      <div class="box">
+        <img class="myphoto" src="./IMG_3493.jpg" alt="islam">
+        <h2>time</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <a href="#features"> more </a>
+      </div>
+      <div class="box">
+        <img class="myphoto" src="./٢٠٢٣٠٢٢٧_١١٤٤٠١.jpg" alt="islam">
+        <h2>passion</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <a href="#features"> more </a>
+      </div>
+    </div>
+  </div>
+  <div class="my_profile">
+<div class="container">
+  <!-- <video src="./y2mate.com - Muslim Etnaset  مسلم  اتنسيت الاغنية الرسمية لفيلم عروستي_1080p.mp4"></video> -->
+  <div class="myeslam">
+ <p>
+  <span> Islam Abu Hamar </span> is a highly skilled web programmer who has made significant contributions to the field of web development. Born and raised in Jordan, Islam has always been passionate about technology and its ability to improve people's lives. He discovered his love for programming at a young age and has been honing his skills ever since.
+  After completing his education in computer science, Islam began working as a web developer at a leading technology firm in Amman. He quickly proved himself to be a talented and innovative programmer, and his contributions helped the company develop new web applications that were highly praised by clients.
+ </p>
+ <img src="./eslam.jpg" alt="">
 </div>
-  <div class="box">
-      <img src="./imgs/gallery-02.png" alt="">
-</div>
-  <div class="box">
-      <img src="./imgs/gallery-03.jpg" alt="">
-</div>
-  <div class="box">
-      <img src="./imgs/gallery-04.png" alt="">
-</div>
-  <div class="box">
-      <img src="./imgs/gallery-05.jpg" alt="">
-</div>
-  <div class="box">
-      <img src="./imgs/gallery-06.png" alt="">
+<video src="./y2mate.com - Muslim Etnaset  مسلم  اتنسيت الاغنية الرسمية لفيلم عروستي_1080p.mp4"  controls autoplay  ></video>
 </div>
   </div>
-</div>
-</div>
-<!-- !.end gallery ************************************************************************-->
-<!--? start features*********************************************************************** -->
-<div class="features" id="features">
-  <h2 class="main-title">features</h2>
-  <div class="container">
-<div class="box">
-  <img  class="random-photo" alt="islam">
-<h2>quality</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
-<a href="##features"> more </a>
-</div>
-<div class="box">
-  <img class="random-photo1" alt="islam">
-<h2>time</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
-<a href="#features"> more </a>
-</div>
-<div class="box">
-  <img class ="random-photo2" alt="islam">
-<h2>passion</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
-<a href="#features"> more </a>
-</div>
-  </div>
-</div>
-<!-- !end features*********************************************************************** -->
-<script src="./index.js"></script>
+   <!-- !end features*********************************************************************** -->
+  <script src="./index.js"></script>
 </body>
 
 </html>
