--- a/index.html
+++ b/index.html
@@ -287,8 +287,10 @@
   <!-- <video src="./y2mate.com - Muslim Etnaset  مسلم  اتنسيت الاغنية الرسمية لفيلم عروستي_1080p.mp4"></video> -->
   <div class="myeslam">
  <p>
-  <span> Islam Abu Hamar </span> is a highly skilled web programmer who has made significant contributions to the field of web development. Born and raised in Jordan, Islam has always been passionate about technology and its ability to improve people's lives. He discovered his love for programming at a young age and has been honing his skills ever since.
-  After completing his education in computer science, Islam began working as a web developer at a leading technology firm in Amman. He quickly proved himself to be a talented and innovative programmer, and his contributions helped the company develop new web applications that were highly praised by clients.
+  <span> Islam Abu Hamar </span> is a highly skilled web programmer who has made significant contributions to the field of web development.
+   Born and raised in Egypt, Islam has always been passionate about technology and its ability to improve people's lives. He discovered his love for programming at a young age and has been honing his skills ever since.
+  After completing his education in computer science, Islam began working as a web developer at a leading technology firm in Dubai.
+   He quickly proved himself to be a talented and innovative programmer, and his contributions helped the company develop new web applications that were highly praised by clients.
  </p>
  <img src="./eslam.jpg" alt="">
 </div>
