--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
   <div class="landing">
     <div class="container">
       <div class="text">
-        <h2>
-          Welcome to my site. We hope you have an enjoyable and useful
-          experience.
-        </h2>
+        <h2 id="paragraph">
+              </h2>
         <p>
           Here Iam gonna share everything about my life. Books Iam reading,
           Games Iam Playing, Stories and Events
