--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 </head>
 
 <body>
-  <!-- start header  -->
-  <div class="header">
+<!-- button top -->
+<div  id="top_scrool" > <i class="fa-regular fa-circle-arrow-up"></i></div>
+<!-- button top -->
+
+<!-- start header  -->
+<div class="header">
     <div class="container">
-      <a href="#logo" class="logo">eslam</a>
+      <a href="#myeslam" class="logo">eslam</a>
       <ul>
         <li><a href="#article">Article</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#features">Features</a></li>
+        <li><a href="#myeslam">Website developer</a></li>
         <li>
           <a href="#otherlinks">Other Links</a>
           <!-- start megamenue -->
@@ -79,6 +84,7 @@
   <div class="landing">
     <div class="container">
       <div class="text">
+        
         <h2>
           Welcome to my site. We hope you have an enjoyable and useful
           experience.
@@ -264,28 +270,29 @@
     <div class="container">
       <div class="box">
         <img class="myphoto" src="./٢٠٢٣٠٢٢٧_١٣٥٩٤٨.jpg" alt="islam">
-        <h2>quality</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <h2>Friends are the sunshine in life</h2>
+        <p>Friends are the stars that brighten our darkest nights, the pillars that hold us up in times of need, and the laughter that fills our days with joy. </p>
         <a href="##features"> more </a>
       </div>
       <div class="box">
         <img class="myphoto" src="./IMG_3493.jpg" alt="islam">
-        <h2>time</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <h2>Friends are the sunshine in life</h2>
+        <p>Friends are the stars that brighten our darkest nights, the pillars that hold us up in times of need, and the laughter that fills our days with joy</p>
         <a href="#features"> more </a>
       </div>
       <div class="box">
         <img class="myphoto" src="./٢٠٢٣٠٢٢٧_١١٤٤٠١.jpg" alt="islam">
-        <h2>passion</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi aliquid provident. </p>
+        <h2>Friends are the sunshine in life</h2>
+        <p>Friends are the stars that brighten our darkest nights, the pillars that hold us up in times of need, and the laughter that fills our days with joy</p>
         <a href="#features"> more </a>
       </div>
     </div>
   </div>
   <div class="my_profile">
+    <h2 class="main-title" id="myeslam">Website developer</h2>
 <div class="container">
-  <!-- <video src="./y2mate.com - Muslim Etnaset  مسلم  اتنسيت الاغنية الرسمية لفيلم عروستي_1080p.mp4"></video> -->
-  <div class="myeslam">
+ 
+  <div  class="myeslam">
  <p>
   <span> Islam Abu Hamar </span> is a highly skilled web programmer who has made significant contributions to the field of web development.
    Born and raised in Egypt, Islam has always been passionate about technology and its ability to improve people's lives. He discovered his love for programming at a young age and has been honing his skills ever since.
@@ -297,6 +304,7 @@
 <video src="./y2mate.com - Muslim Etnaset  مسلم  اتنسيت الاغنية الرسمية لفيلم عروستي_1080p.mp4"  controls autoplay  ></video>
 </div>
   </div>
+  
    <!-- !end features*********************************************************************** -->
   <script src="./index.js"></script>
 </body>
